--- a/sass/modules/_m-home.scss
+++ b/sass/modules/_m-home.scss
@@ -1211,7 +1211,13 @@
                 margin-top: 4rem;
                 
             }
-            
+            @media screen and (min-width: map-get($break-point, xlg)) {
+                background: none;
+                height: auto;
+                width: 100%;
+                margin-top: 7rem;
+                
+            }
 
         .cadre__detail{
             
