--- a/css/screen.css
+++ b/css/screen.css
@@ -1099,6 +1099,10 @@ img {
       background-color:map-get($colors,primary); ;
   }*/
 }
+/* line 81, ../sass/layout/_l-header.scss */
+.l-header .l-nav__main.l-menu.is-visible {
+  display: block;
+}
 @media screen and (min-width: 740px) {
   /* line 71, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu {
@@ -1130,7 +1134,7 @@ img {
     margin-right: 4rem;
   }
 }
-/* line 123, ../sass/layout/_l-header.scss */
+/* line 122, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav ul {
   height: 100vh;
   padding-top: 5rem;
@@ -1138,36 +1142,37 @@ img {
   text-align: center;
 }
 @media screen and (min-width: 740px) {
-  /* line 123, ../sass/layout/_l-header.scss */
+  /* line 122, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     z-index: 999;
     width: auto;
     height: 4rem;
     text-align: left;
     position: inherit;
-    padding-top: 0;
+    padding-top: 1rem;
+    display: block;
     font-size: 18px;
   }
 }
 @media screen and (min-width: 1024px) {
-  /* line 123, ../sass/layout/_l-header.scss */
+  /* line 122, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     text-align: right;
   }
 }
 @media screen and (min-width: 1420px) {
-  /* line 123, ../sass/layout/_l-header.scss */
+  /* line 122, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     margin-right: 2.2rem;
   }
 }
 @media screen and (min-width: 1920px) {
-  /* line 123, ../sass/layout/_l-header.scss */
+  /* line 122, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav ul {
     margin-right: 4rem;
   }
 }
-/* line 156, ../sass/layout/_l-header.scss */
+/* line 155, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav li {
   position: relative;
   display: block;
@@ -1176,17 +1181,17 @@ img {
   padding-left: 1rem;
 }
 @media screen and (min-width: 740px) {
-  /* line 156, ../sass/layout/_l-header.scss */
+  /* line 155, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav li {
     display: inline-block;
-    margin: auto 0rem auto -0.5rem;
+    margin: auto 0rem auto 0rem;
   }
-  /* line 168, ../sass/layout/_l-header.scss */
+  /* line 167, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav li:hover {
     transform: scale(0.9);
   }
 }
-/* line 176, ../sass/layout/_l-header.scss */
+/* line 175, ../sass/layout/_l-header.scss */
 .l-header .l-nav__main.l-menu nav a {
   text-decoration: none;
   text-align: center;
@@ -1194,31 +1199,23 @@ img {
   font-size: 25px;
 }
 @media screen and (min-width: 740px) {
-  /* line 176, ../sass/layout/_l-header.scss */
+  /* line 175, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a {
     color: white;
     padding: 0.2rem 0.5rem;
     margin: auto auto auto 1rem;
   }
   /* line 191, ../sass/layout/_l-header.scss */
-  .l-header .l-nav__main.l-menu nav a:hover {
-    color: #4eb748;
-  }
-  /* line 196, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a:hover, .l-header .l-nav__main.l-menu nav a.is-active {
     right: 0;
   }
-  /* line 202, ../sass/layout/_l-header.scss */
+  /* line 196, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a.blue-contact {
     color: #4eb748;
   }
-  /* line 205, ../sass/layout/_l-header.scss */
-  .l-header .l-nav__main.l-menu nav a.blue-contact:hover {
-    color: #2999d1;
-  }
 }
 @media screen and (min-width: 740px) {
-  /* line 222, ../sass/layout/_l-header.scss */
+  /* line 211, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a.hover:hover:before {
     display: grid;
     content: "";
@@ -1230,7 +1227,7 @@ img {
     border-bottom: 3px solid #4eb748;
     border-left: 3px solid #4eb748;
   }
-  /* line 234, ../sass/layout/_l-header.scss */
+  /* line 223, ../sass/layout/_l-header.scss */
   .l-header .l-nav__main.l-menu nav a.hover:hover:after {
     display: block;
     content: "";
@@ -1243,12 +1240,12 @@ img {
     border-right: 3px solid #4eb748;
   }
 }
-/* line 250, ../sass/layout/_l-header.scss */
+/* line 239, ../sass/layout/_l-header.scss */
 .l-header #menu-up {
   display: none;
 }
 @media screen and (min-width: 740px) {
-  /* line 250, ../sass/layout/_l-header.scss */
+  /* line 239, ../sass/layout/_l-header.scss */
   .l-header #menu-up {
     width: 100%;
     height: 4rem;
@@ -1261,7 +1258,7 @@ img {
     margin-top: 0rem;
   }
 }
-/* line 267, ../sass/layout/_l-header.scss */
+/* line 256, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham {
   grid-area: l-ham;
   display: grid;
@@ -1278,12 +1275,12 @@ img {
   position: fixed;
 }
 @media screen and (min-width: 740px) {
-  /* line 267, ../sass/layout/_l-header.scss */
+  /* line 256, ../sass/layout/_l-header.scss */
   .l-header #menu-hamburger.l-ham {
     display: none;
   }
 }
-/* line 292, ../sass/layout/_l-header.scss */
+/* line 281, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham span {
   height: .12rem;
   margin-bottom: -0.9rem;
@@ -1296,37 +1293,37 @@ img {
   transform: rotate(0deg);
   transition: .25s ease-in-out;
 }
-/* line 308, ../sass/layout/_l-header.scss */
+/* line 297, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open {
   z-index: 9999;
   display: grid;
   float: right;
 }
 @media screen and (min-width: 740px) {
-  /* line 308, ../sass/layout/_l-header.scss */
+  /* line 297, ../sass/layout/_l-header.scss */
   .l-header #menu-hamburger.l-ham.is-open {
     display: none;
   }
 }
-/* line 319, ../sass/layout/_l-header.scss */
+/* line 308, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span {
   background: white;
 }
-/* line 322, ../sass/layout/_l-header.scss */
+/* line 311, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span:nth-child(1) {
   transform: rotate(60deg);
   margin-top: 0.68rem;
 }
-/* line 328, ../sass/layout/_l-header.scss */
+/* line 317, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span:nth-child(2) {
   transform: rotate(-60deg);
 }
-/* line 333, ../sass/layout/_l-header.scss */
+/* line 322, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open span:nth-child(3) {
   top: 0rem;
   width: 0%;
 }
-/* line 346, ../sass/layout/_l-header.scss */
+/* line 335, ../sass/layout/_l-header.scss */
 .l-header #menu-hamburger.l-ham.is-open:before {
   background: transparent;
 }
